--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,4 @@
-body {
-  margin: 0;
+.App {
+  text-align: center;
   font-family: "Roboto";
-  background: #f9fafb;
-  width: 100%;
-  height: 100%;
 }
