--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,7 @@
-.App {
-  text-align: center;
+body {
+  margin: 0;
   font-family: "Roboto";
+  background: #f9fafb;
+  width: 100%;
+  height: 100%;
 }
